# editor

./: .gitignore  CMakeLists.txt  LICENSE  README  arith.hpp  buffer.cpp  buffer.hpp  build.sh  chars.cpp  chars.hpp  editing.cpp  editing.hpp  error.hpp  io.cpp  io.hpp  keyboard.cpp  keyboard.hpp  layout.hpp  main.cpp  movement.cpp  movement.hpp  region_stats.cpp  region_stats.hpp  state.cpp  state.hpp  state_types.hpp  term_ui.cpp  term_ui.hpp  terminal.cpp  terminal.hpp  terminal_size.hpp  undo.cpp  undo.hpp  util.cpp  util.hpp
